fix: fixed alignment of text

--- a/public/stylesheets/overview.css
+++ b/public/stylesheets/overview.css
@@ -111,6 +111,7 @@ h3 {
 
 ul {
     list-style-type: none;
+    text-align: left;
     padding: 0;
 }
 
@@ -174,5 +175,20 @@ ul {
 }
 
 .create-set-button:hover {
+    background-color: #f50057;
+}
+
+.editButton {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #ff4081;
+    color: #fff;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.editButton:hover {
     background-color: #f50057;
 }
